--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.0"
